# adk-starter-project

./: CLAUDE.md  README.md  pyproject.toml
adk-starter-project/: README.md  requirements.txt
adk-starter-project/SRC/: agent.py  deploy.py  rag_example.py
my_agent/: __init__.py  agent.py  auth.py  prompts.py  requirements.txt  tools.py
my_agent/sub_agents/: __init__.py
my_agent/tests/: __init__.py
