[project]
name = "my-agent"
version = "0.1.0"
description = "A starter template for Google ADK agents"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "google-adk>=1.21.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.132.0",
    "google-cloud-logging>=3.12.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "fastapi>=0.115.0",
]

authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_agent"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
  "D213",
  "D203",
  "S101",
]
lint.fixable = ["ALL"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.2.1",
    "ruff>=0.9.6",
    "python-dotenv>=1.1.1",
]

[tool.uv]
# For agent engine dependency issue
override-dependencies = [
    "cloudpickle>=2.2.1,<3.0.0",
]
